# team-collab

./: .gitignore  .mcp.json  PLAN.md  README.md  TASKS.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
agents/: integrator.md  reviewer.md
commands/: team-add-task.md  team-claim.md  team-finalize.md  team-init.md  team-join.md  team-review.md  team-status.md  team-submit.md  team-sync.md  team-tasks.md  team.md
demo/hybrid/: brief.md  tasks_dictation.md
demo/parallel/: brief.md  tasks_dictation.md
demo/pipeline/: brief.md  tasks_dictation.md
docs/: USAGE.md  manual_setup.md
scripts/: install.ps1  install.sh
sim_demo/: run_simulation.py  test_deepseek_review.py
skills/: team-bootstrap.md  team-coordinator.md  team-member.md  team.md
teamcollab/: __init__.py  conflict.py  contracts.py  events.py  git_ops.py  server.py
teamcollab/tools/: __init__.py  _changelog.py  _dag.py  _io.py  _paths.py  _resolve.py  _slides.py  events_recent.py  glossary.py  read_artifact.py  search_blackboard.py  sync_now.py  task_add.py  task_claim.py  task_create_batch.py  task_list.py  task_review.py  task_submit.py  team_init.py  team_join.py
templates/.github/workflows/: teamcollab.yml
templates/scripts/: run_integrator.py  run_reviewer.py
tests/: test_conflict.py  test_contracts.py  test_e2e_verification.py  test_events.py  test_git_ops.py  test_tools_misc.py  test_tools_tasks.py
